2006-12-02  Matt Rice  <ratmice@gmail.com>

	* Palettes/0Menus/GormMenuEditor.m (-mouseDown:): Call
	startConnecting.
	* GormCore/GormViewEditor.m (-startConnectingObject:withEvent:): Ditto.
	* GormCore/GormObjectEditor.m (-mouseDown:): Ditto.
	* GormCore/GormDocument.m (changeToViewWithTag:): Don't change the
	selection if connecting.
	* GormCore/GormResourceManager.m: Revert previous commit.
	* Gorm.m (-startConnecting:): Remove checks for a nil
	connectDestination.

2006-11-27  Matt Rice  <ratmice@gmail.com>
	
	* GormCore/GormResourceManager.m: Temporarily comment out some code.

2006-11-23 22:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Move initial position of
	Gorm document window back to the lower left of the screen.

2006-11-23 11:03-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Version: updated version requirements.

2006-11-18  Matt Rice  <ratmice@gmail.com>

	* GormCore/GormDocumentWindow.[h,m]: Add copyright headers.
	
2006-11-18  Matt Rice  <ratmice@gmail.com>

	* GormCore/GNUmakefile: Add GormDocumentWindow.[h,m].
	* GormCore/GormResourceManager.m: Add code to handle 
	image/sound/header files.
	* GormCore/GormDocument.[h,m]: Add -viewWithTag: method.
	* GormCore/GormClassEditor.m: Remove dragging destination code
	for resources.
	* GormCore/GormResourceEditor.m: Ditto.
	* GormCore/GormObjectEditor.m: Ditto.
	(addObject:): Change the editor to the GormObjectEditor.
	* GormCore/GormDocument.m: Register the window for dragged types.
	Implement -viewWithTag:.
	* GormCore/GormDocumentWindow.[h,m]: New subclass of NSWindow which
	handles drag and drop to GormResourceManager.
	* GormCore/GormDocument.gorm: Set the main document  window to a
	GormDocumentWindow class.

2006-11-15  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/Examples/Controller/GNUmakefile: Do not set 
	GNUSTEP_INSTALLATION_DIR.
	* Documentation/Examples/SimpleApp/GNUmakefile: Same change.	
